-
Bug
-
Resolution: Fixed
-
Major
-
Lustre 2.7.0, Lustre 2.5.3
-
3
-
9223372036854775807
After eviction failed export stayed at stale list, a client had IO processing and reconnected during it. A client sent brw rpc with last lock cookie and new connection. The lock with failed export was found and assert was happened.
(ost_handler.c:1812:ost_prolong_lock_one())
ASSERTION( lock->l_export == opd->opd_exp ) failed:
I couldn`t reproduce it on top of master after 'LU-6271 osc: handle osc eviction correctly'. But master is affected when older client is working.
- duplicates
-
LU-7637 recovery-small test_131 test failed: [ 592.536615] LustreError: 9581:0:(ofd_dev.c:2276:ofd_prolong_extent_locks()) ASSERTION( lock->l_export == exp ) failed: LBUG
-
- Resolved
-