lustre/include/lustre_dlm.h
@@ -1196,6 +1196,18 @@ int ldlm_flock_completion_ast(struct ldlm_lock *lock, __u64 flags, void *data);
 /* ldlm_extent.c */
 __u64 ldlm_extent_shift_kms(struct ldlm_lock *lock, __u64 old_kms);
 
+struct prolong_args {
+	struct obd_export	*export;
+	struct ldlm_res_id	resid;
+	struct ldlm_extent	extent;
+	enum ldlm_mode		mode;
+	int			timeout;
+	int			locks_cnt;
+	int			blocks_cnt;
+};
+void ldlm_lock_prolong_one(struct ldlm_lock *lock, struct prolong_args *arg);
+void ldlm_resource_prolong(struct prolong_args *arg);
+
 struct ldlm_callback_suite {
         ldlm_completion_callback lcs_completion;
         ldlm_blocking_callback   lcs_blocking;
